--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
-node_modules
-dist
+# Mac files
+.DS_Store
+
+# Project files
+/dist
+
+# Node directories and files
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+# to lock base dependencies, pls don't ignore this file in base
+
+# git files
+!dist/.gitkeep
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.tgz
+
+# Jsdoc generated docs
+out/
+/.postcssrc.js
